[package]
name = "rs-broker"
version = "1.0.1"
edition = "2024"
authors = ["daheige"]
description = "rust broker"
keywords = ["broker", "rs-broker", "rust-broker", "kafka", "broker-mq"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/rs-god/rs-broker"
documentation = "https://docs.rs/rs-broker/"

[dependencies]
async-trait = "0.1.89"
tokio = { version = "1.48.0", features = ["full"] }
futures = "0.3.31"
rdkafka = { version = "0.38.0", features = ["cmake-build"] }
log = "0.4.29"
env_logger = "0.11.8"
